tests/paczka1/fuzzy1/55847030.err
Error in line 7: Miza S873 46,0
Error in line 9: 5SnoiXo S54 93,4
Error in line 11: 5SnoiXo S964 13,1
Error in line 13: 5SnoiXo S873 35,5
Error in line 26: 2UVaHC S873 85,0
Error in line 32: ukQz S54 35,0
Error in line 38: 2UVaHC S964 0,13
Error in line 30: 2UVaHC S964 0,6
Error in line 35: ukQz S949 97,7
